<resources>
    <string name="app_name">Sofo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Have an account?</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot?</string>
    <string name="create_an_account">Create an account</string>
    <string name="reset_password">Reset password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New password</string>
    <string name="sorry_your_session_has_expired_login_again_to_continue">Sorry, your session has expired.\n Login again to continue</string>
    <string name="email_username">Email/Username</string>
    <string name="_continue">Continue</string>
    <string name="please_check_your_email_for_a_special_code">Please check your email for a special code</string>
    <string name="code_received">Code received</string>
    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="contacts">Contacts</string>
    <string name="upgrade">Upgrade</string>
    <string name="become_premium">Become premium</string>
    <string name="you_can_currently_view_places_within_50_miles_radius_upgrade_to_see_everything">You can currently view places within 50 miles radius.\nUpgrade to see everything</string>
    <string name="account_settings">Account settings</string>
    <string name="edit">Edit</string>
    <string name="privacy">Privacy</string>
    <string name="ghost_mode">Ghost mode</string>
    <string name="render_you_hidden_from_search_and_location_list_however_if_you_are_within_another_user_s_line_of_sight_you_would_be_discoverable">Render you hidden from search and location list however if you are within another user\'s line of sight, you would be discoverable</string>
    <string name="business_mode">Business mode</string>
    <string name="add_your_social_media_accounts">Add your social media accounts</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="only_linked_in_account_integrates_in_professional_mode">Only Linked In account integrates in professional mode</string>

    <string name="twitter_key">CKEuD32HEDM5Pfw8sr8rJJywD</string>
    <string name="twitter_secret"> fsuEyV6v6sOHnfEJ8upzDTOXsFQLIp521R4f1bHIoZihBAvQ7Z</string>

    <string name="facebook_app_id">1937993566519381</string>
    <string name="fb_login_protocol_scheme">fb1937993566519381</string>

    <string name="google_maps_key">AIzaSyAWwhpeyD4fkh_r6uG9niUN_UkCMuWuNEc</string>


    <string name="drawer_open">DrawerOpen</string>
    <string name="drawer_close">drawer close</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="sachin">\@Sachin</string>

    <string name="ig_client">14666783c2db4370b32c28a12eab9239</string>
    <string name="ig_secret">61ac9081f1c6460ab626993723c2babd</string>
    <string name="ig_callback">http://www.twixttechnologies.com</string>
    <string name="connect">Connect</string>
    <string name="phone">Phone</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>

</resources>
