<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight=".6"/>

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/sofo"/>

    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@id/txtPassword"
        style="@style/register_text_box_style"
        android:hint="@string/new_password"
        android:inputType="textPassword"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@id/txtConfirmPassword"
        style="@style/register_text_box_style"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>

    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@id/btnSubmit"
        style="@style/button_style"
        android:text="@string/reset_password"/>


    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1.6"/>

</LinearLayout>