<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight=".8"/>

    <android.support.v7.widget.AppCompatTextView
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/become_premium"
        android:textColor="@color/colorPrimaryText"/>


    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight=".2"/>


    <android.support.v7.widget.AppCompatTextView
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/you_can_currently_view_places_within_50_miles_radius_upgrade_to_see_everything"
        android:textColor="@color/colorSecondaryText"/>


    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight=".5"/>


    <android.support.v7.widget.AppCompatButton
        android:id="@id/btnSubmit"
        style="@style/button_style"
        android:layout_marginBottom="@dimen/half_margin"
        android:text="@string/upgrade"/>


    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>