<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight=".3"/>

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/sofo"/>

    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight=".9"/>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/label_text_size"
        android:text="@string/please_check_your_email_for_a_special_code"/>

    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight=".4"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/txtResetCode"
        style="@style/register_text_box_style"
        android:hint="@string/code_received"
        android:inputType="textEmailAddress"/>


    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight=".6"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@id/btnSubmit"
        style="@style/button_style"
        android:layout_marginBottom="@dimen/half_margin"
        android:text="@string/_continue"/>


    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>